--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
         <!-- Hero Section -->
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
-                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 72px;"> 
+                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 80px;"> 
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
-            <div class="text-center pt-8 pb-12 px-4"> <!-- Reduced bottom padding -->
+            <div class="text-center pt-6 pb-12 px-4"> <!-- Reduced top padding to move text up -->
                 <h1 class="section-title text-white">The Future of Diagnostics is Here.</h1>
                 <p class="section-subtitle text-sky-200 mt-4">
                     Lab-On-Time™ delivers lab-grade accuracy to the point-of-care with a revolutionary single-step process.
@@ -135,7 +135,7 @@
         </section>
 
         <!-- Product Image Section -->
-        <section class="py-12 flex justify-center"> <!-- Removed negative margin and Z-index, added top padding -->
+        <section class="pt-12 pb-8 flex justify-center"> <!-- Removed negative margin, added padding to place it on white bg -->
             <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
         </section>
 
