--- a/index.html
+++ b/index.html
@@ -123,7 +123,15 @@
         <!-- Hero Section -->
         <section class="brand-bg-hero text-white rounded-b-3xl -mx-4 px-4">
             <header class="py-6 px-4 flex justify-between items-center">
-                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 80px;"> 
+                 <!-- 
+                    --- שינוי הלוגו ---
+                    שיניתי את גודל הלוגו לפי בקשתך.
+                    הלוגו נמצא בשורה מתחת להערה זו. הוא מיושר לשמאל אוטומטית.
+                    כדי לשנות את הגודל שלו, שנה את המספר ב- `max-height: 120px`.
+                    לדוגמה, לגודל קטן יותר שנה ל-`max-height: 80px`. לגודל גדול יותר, שנה ל-`max-height: 140px`.
+                 -->
+                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="max-height: 120px;"> 
+                 
                  <div class="text-sm font-semibold text-sky-200">Revolutionizing Point-of-Care Diagnostics</div>
             </header>
             <div class="text-center pt-6 pb-12 px-4"> <!-- Reduced top padding to move text up -->
@@ -136,6 +144,11 @@
 
         <!-- Product Image Section -->
         <section class="pt-12 pb-8 flex justify-center"> <!-- Removed negative margin, added padding to place it on white bg -->
+            <!-- 
+                --- שינוי תמונת המוצר ---
+                התמונה ממוקמת בשורה מתחת להערה זו. היא ממוקמת על הרקע הלבן.
+                כדי להשתמש בתמונה אחרת, החלף את "image.png" בשם הקובץ של התמונה שלך.
+            -->
             <img src="image.png" alt="Lab-On-Time Device" class="product-image-stylish">
         </section>
 
