--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             .container { width: 100% !important; max-width: 100% !important; padding: 0 !important; margin: 0 !important; box-shadow: none; }
             img { max-width: 100% !important; }
             .content-card, .stat-card { box-shadow: none !important; border: 1px solid #e5e7eb; }
-            .brand-bg-hero { background-image: url('BMT Lab On Time - Strep A brochure  (1).pdf.jpg') !important; }
+            .brand-bg-hero { background-image: url('BMT Lab On Time - Strep A brochure  (1).pdf.png') !important; }
             .footer-stylish { background-color: #111827 !important; color: #9CA3AF !important; }
         }
 
