--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 1. ודא שתמונת הרקע שלך נמצאת באותה תיקייה כמו קובץ ה-HTML הזה.
                 2. בשורה הבאה, החלף את "your-hero-image.jpg" בשם קובץ התמונה שלך.
             -->
-            <div style="background-image: url('your-hero-image.jpg'); background-size: cover; background-position: center;" class="absolute inset-0 rounded-t-xl"></div>
+            <div style="background-image: url('BMT Lab On Time - Strep A brochure  (1).pdf.png'); background-size: cover; background-position: center;" class="absolute inset-0 rounded-t-xl"></div>
             <div class="absolute inset-0 bg-black opacity-40 rounded-t-xl"></div>
             
             <div class="relative z-10">
