--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        /*
-        ========================================================================
-        הסבר על הגדרות עיצוב כלליות
-        ========================================================================
-        */
-
         /* --- איך לשנות את צבעי המותג ---
             כאן מוגדרים צבעי המותג הראשיים. כדי לשנות, פשוט החלף את קוד הצבע (לדוגמה: #0ea5e9) בצבע הרצוי.
         */
@@ -38,7 +32,7 @@
             box-shadow: 0 0 15px rgba(0,0,0,0.15);
             display: flex;
             flex-direction: column;
-            padding: 15mm; /* שוליים לדף A4 */
+            padding: 18mm; /* שוליים לדף A4 */
         }
 
         /* הגדרות הדפסה כדי שהקובץ ייראה מושלם ב-PDF */
@@ -51,8 +45,14 @@
                 height: 100%;
                 margin: 0;
                 box-shadow: none;
-                padding: 10mm;
+                padding: 10mm 15mm;
             }
+        }
+
+        /* --- הגדרות עיצוב כלליות --- */
+        .header {
+            padding: 1rem 1.5rem;
+            position: relative; /* נדרש עבור שכבת הכיסוי */
         }
 
         .hero-title {
@@ -78,17 +78,17 @@
         <!-- ====================================================================== -->
         <!--                              HEADER                                    -->
         <!-- ====================================================================== -->
-        <header class="relative -mx-[15mm] -mt-[15mm] mb-6">
+        <header class="header rounded-t-xl -mx-[18mm] -mt-[18mm]">
             <!-- 
                 --- איך להחליף את תמונת הרקע העליונה ---
                 1. ודא שתמונת הרקע שלך נמצאת באותה תיקייה כמו קובץ ה-HTML הזה.
                 2. בשורה הבאה, החלף את "your-hero-image.jpg" בשם קובץ התמונה שלך.
             -->
-            <div style="background-image: url('your-hero-image.jpg'); background-size: cover; background-position: center; height: 220px;" class="w-full"></div>
-            <div class="absolute inset-0 bg-black opacity-40"></div>
+            <div style="background-image: url('your-hero-image.jpg'); background-size: cover; background-position: center;" class="absolute inset-0 rounded-t-xl"></div>
+            <div class="absolute inset-0 bg-black opacity-40 rounded-t-xl"></div>
             
-            <div class="absolute inset-0 flex flex-col p-6">
-                <div class="flex justify-between items-start">
+            <div class="relative z-10">
+                <div class="flex justify-between items-center">
                     <div>
                         <!-- 
                             --- איך להחליף ולשנות את הלוגו ---
@@ -98,17 +98,15 @@
                         -->
                         <img src="unnamed.png" alt="BMT Diagnostics Logo" style="height: 70px;">
                     </div>
-                    <div class="text-right text-sm font-semibold text-gray-200 pt-1">
+                    <div class="text-right text-sm font-semibold text-gray-200">
                         Revolutionizing<br>Point-of-Care Diagnostics
                     </div>
                 </div>
-                <div class="flex-grow flex items-center justify-center text-center">
-                    <div class="text-white">
-                        <h1 class="text-4xl font-bold hero-title">The Future of Diagnostics is Here.</h1>
-                        <p class="text-lg mt-3 max-w-xl mx-auto hero-title">
-                            Lab-On-Time™ delivers lab-grade accuracy with a revolutionary single-step process.
-                        </p>
-                    </div>
+                <div class="text-center pt-8 pb-12">
+                    <h1 class="text-4xl font-bold text-white hero-title">The Future of Diagnostics is Here.</h1>
+                    <p class="text-lg text-gray-200 mt-3 max-w-xl mx-auto hero-title">
+                        Lab-On-Time™ delivers lab-grade accuracy to the point-of-care with a revolutionary single-step process.
+                    </p>
                 </div>
             </div>
         </header>
@@ -118,12 +116,12 @@
         <!-- ====================================================================== -->
         <main class="flex-grow">
             <!-- Product Image Section -->
-            <section class="mb-8 p-3 rounded-xl" style="background-color: var(--bg-separator-blue);">
+            <section class="mb-8 p-4 rounded-xl" style="background-color: var(--bg-separator-blue);">
                 <!-- 
                     --- איך להחליף את תמונת המוצר ---
                     החלף את "image.png" בשם קובץ התמונה שלך.
                 -->
-                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto rounded-lg shadow-md">
+                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto rounded-lg shadow-lg">
             </section>
 
             <!-- Stats Section -->
