--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
         }
 
         .footer {
-            border-top: 1px solid #e5e7eb;
             padding-top: 1rem;
             margin-top: auto; /* דוחף את החלק התחתון לתחתית הדף */
             text-align: center;
@@ -100,7 +99,7 @@
                 -->
                 <img src="unnamed.png" alt="BMT Diagnostics Logo" style="height: 60px;">
             </div>
-            <div class="text-right text-sm font-semibold" style="color: var(--brand-blue-dark);">
+            <div class="text-center text-sm font-semibold" style="color: var(--brand-blue-dark);">
                 Revolutionizing<br>Point-of-Care Diagnostics
             </div>
         </header>
@@ -157,16 +156,16 @@
             </section>
 
             <!-- Problem & Solution Section -->
-            <section class="grid grid-cols-2 gap-8 mb-8">
+            <section class="grid grid-cols-2 gap-16 mb-10">
                 <div>
                     <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Challenge: Delays in Diagnostics</h2>
-                    <p class="text-sm leading-relaxed" style="color: var(--text-light);">
+                    <p class="text-lg leading-relaxed" style="color: var(--text-light);">
                         Traditional diagnostic methods are often slow and lab-dependent, creating bottlenecks that delay crucial treatment. This inefficiency strains healthcare resources and can compromise patient care. 
                     </p>
                 </div>
                  <div>
                     <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Solution: Lab-On-Time™</h2>
-                    <p class="text-sm leading-relaxed" style="color: var(--text-light);">
+                    <p class="text-lg leading-relaxed" style="color: var(--text-light);">
                         BMT Diagnostics closes this gap by bringing instant, reliable testing directly to the point-of-care. Our patented platform is designed for maximum ease-of-use.
                         <br><strong class="font-semibold" style="color: var(--brand-blue);">No-Step. No Confusion. Just Results.</strong>
                     </p>
@@ -174,8 +173,8 @@
             </section>
 
             <!-- Key Features Section -->
-            <section class="mb-6">
-                 <h2 class="text-xl font-bold text-center mb-4" style="color: var(--brand-blue-dark);">Why Lab-On-Time™ is the Right Choice</h2>
+            <section class="mb-6 mt-12">
+                 <h2 class="text-xl font-bold text-center mb-6" style="color: var(--brand-blue-dark);">Why Lab-On-Time™ is the Right Choice</h2>
                  <div class="grid grid-cols-4 gap-6 text-center">
                     <!-- 
                         --- איך לשנות את האייקונים ---
@@ -184,23 +183,23 @@
                     -->
                     <div>
                         <p class="text-4xl">⚡</p>
-                        <h3 class="font-semibold text-sm mt-1">Rapid & Efficient</h3>
-                        <p class="text-xs text-gray-500 mt-1">Get actionable results during a single patient visit.</p>
+                        <h3 class="font-semibold text-base mt-1">Rapid & Efficient</h3>
+                        <p class="text-base text-gray-500 mt-1">Get actionable results during a single patient visit.</p>
                     </div>
                     <div>
                         <p class="text-4xl">🎯</p>
-                        <h3 class="font-semibold text-sm mt-1">Highly Accurate</h3>
-                        <p class="text-xs text-gray-500 mt-1">Closed-system design minimizes user error.</p>
+                        <h3 class="font-semibold text-base mt-1">Highly Accurate</h3>
+                        <p class="text-base text-gray-500 mt-1">Closed-system design minimizes user error.</p>
                     </div>
                     <div>
                         <p class="text-4xl">👍</p>
-                        <h3 class="font-semibold text-sm mt-1">Exceptionally Simple</h3>
-                        <p class="text-xs text-gray-500 mt-1">Intuitive one-step operation requires minimal training.</p>
+                        <h3 class="font-semibold text-base mt-1">Exceptionally Simple</h3>
+                        <p class="text-base text-gray-500 mt-1">Intuitive one-step operation requires minimal training.</p>
                     </div>
                     <div>
                         <p class="text-4xl">♻️</p>
-                        <h3 class="font-semibold text-sm mt-1">Eco-Conscious</h3>
-                        <p class="text-xs text-gray-500 mt-1">Reduces plastic and liquid waste compared to other tests.</p>
+                        <h3 class="font-semibold text-base mt-1">Eco-Conscious</h3>
+                        <p class="text-base text-gray-500 mt-1">Reduces plastic and liquid waste compared to other tests.</p>
                     </div>
                  </div>
             </section>
@@ -210,6 +209,7 @@
         <!--                              FOOTER                                    -->
         <!-- ====================================================================== -->
         <footer class="footer">
+             <div class="border-t border-gray-300 w-1/2 mx-auto mb-4"></div>
              <h3 class="font-bold mb-1" style="color: var(--text-dark);">Join Us in the Diagnostics Revolution</h3>
              <p class="text-xs mb-2 text-gray-600">
                 We are actively seeking global strategic partners, distributors, and OEM collaborators.
