--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     --- איך להחליף את תמונת המוצר ---
                     החלף את "image.png" בשם קובץ התמונה שלך.
                 -->
-                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto rounded-lg shadow-md">
+                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto rounded-lg shadow-md max-w-md mx-auto">
             </section>
 
             <!-- Stats Section -->
@@ -156,16 +156,16 @@
             </section>
 
             <!-- Problem & Solution Section -->
-            <section class="grid grid-cols-2 gap-16 mb-10">
+            <section class="grid grid-cols-2 gap-24 mb-10 text-center">
                 <div>
                     <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Challenge: Delays in Diagnostics</h2>
-                    <p class="text-lg leading-relaxed" style="color: var(--text-light);">
+                    <p class="text-base leading-relaxed" style="color: var(--text-light);">
                         Traditional diagnostic methods are often slow and lab-dependent, creating bottlenecks that delay crucial treatment. This inefficiency strains healthcare resources and can compromise patient care. 
                     </p>
                 </div>
                  <div>
                     <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Solution: Lab-On-Time™</h2>
-                    <p class="text-lg leading-relaxed" style="color: var(--text-light);">
+                    <p class="text-base leading-relaxed" style="color: var(--text-light);">
                         BMT Diagnostics closes this gap by bringing instant, reliable testing directly to the point-of-care. Our patented platform is designed for maximum ease-of-use.
                         <br><strong class="font-semibold" style="color: var(--brand-blue);">No-Step. No Confusion. Just Results.</strong>
                     </p>
@@ -173,7 +173,7 @@
             </section>
 
             <!-- Key Features Section -->
-            <section class="mb-6 mt-12">
+            <section class="mb-6 mt-16">
                  <h2 class="text-xl font-bold text-center mb-6" style="color: var(--brand-blue-dark);">Why Lab-On-Time™ is the Right Choice</h2>
                  <div class="grid grid-cols-4 gap-6 text-center">
                     <!-- 
@@ -183,22 +183,22 @@
                     -->
                     <div>
                         <p class="text-4xl">⚡</p>
-                        <h3 class="font-semibold text-base mt-1">Rapid & Efficient</h3>
+                        <h3 class="font-semibold text-lg mt-1">Rapid & Efficient</h3>
                         <p class="text-base text-gray-500 mt-1">Get actionable results during a single patient visit.</p>
                     </div>
                     <div>
                         <p class="text-4xl">🎯</p>
-                        <h3 class="font-semibold text-base mt-1">Highly Accurate</h3>
+                        <h3 class="font-semibold text-lg mt-1">Highly Accurate</h3>
                         <p class="text-base text-gray-500 mt-1">Closed-system design minimizes user error.</p>
                     </div>
                     <div>
                         <p class="text-4xl">👍</p>
-                        <h3 class="font-semibold text-base mt-1">Exceptionally Simple</h3>
+                        <h3 class="font-semibold text-lg mt-1">Exceptionally Simple</h3>
                         <p class="text-base text-gray-500 mt-1">Intuitive one-step operation requires minimal training.</p>
                     </div>
                     <div>
                         <p class="text-4xl">♻️</p>
-                        <h3 class="font-semibold text-base mt-1">Eco-Conscious</h3>
+                        <h3 class="font-semibold text-lg mt-1">Eco-Conscious</h3>
                         <p class="text-base text-gray-500 mt-1">Reduces plastic and liquid waste compared to other tests.</p>
                     </div>
                  </div>
