--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     1. ודא שתמונת הרקע שלך נמצאת באותה תיקייה כמו קובץ ה-HTML הזה.
                     2. בשורה הבאה, החלף את "your-hero-image.jpg" בשם קובץ התמונה שלך.
                 -->
-                <div style="background-image: url('BMT Lab On Time - Strep A brochure  (1).pdf.png'); background-size: cover; background-position: center;" class="absolute inset-0"></div>
+                <div style="background-image: url('your-hero-image.jpg'); background-size: cover; background-position: center;" class="absolute inset-0"></div>
                 <div class="absolute inset-0 bg-black opacity-40"></div>
                  
                 <div class="relative z-10 text-white">
@@ -157,17 +157,25 @@
             </section>
 
             <!-- אזור האתגר והפתרון -->
-            <!-- !!! שינוי: הריפוד השמאלי הוגדל (ל-pl-12) כדי להזיז את הטקסט עוד ימינה !!! -->
-            <section class="grid grid-cols-2 gap-12 mb-10 pl-12">
-                <div>
-                    <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Challenge: Delays in Diagnostics</h2>
-                    <p class="text-base leading-relaxed" style="color: var(--text-light);">
+            <!-- !!! שינוי: נוסף ריפוד שמאלי (pl-6) לפסקאות כדי להזיז אותן ימינה. !!! -->
+            <section class="grid grid-cols-2 gap-12 mb-10">
+                <div class="text-center">
+                    <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">
+                        The Challenge:
+                        <br>
+                        Delays in Diagnostics
+                    </h2>
+                    <p class="text-base leading-relaxed text-left pl-6" style="color: var(--text-light);">
                         Traditional diagnostic methods are often slow and lab-dependent, creating bottlenecks that delay crucial treatment. This inefficiency strains healthcare resources and can compromise patient care.
                     </p>
                 </div>
-                 <div>
-                    <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">The Solution: Lab-On-Time™</h2>
-                    <p class="text-base leading-relaxed" style="color: var(--text-light);">
+                 <div class="text-center">
+                    <h2 class="text-xl font-bold mb-2" style="color: var(--brand-blue-dark);">
+                        The Solution:
+                        <br>
+                        Lab-On-Time™
+                    </h2>
+                    <p class="text-base leading-relaxed text-left pl-6" style="color: var(--text-light);">
                         BMT Diagnostics closes this gap by bringing instant, reliable testing directly to the point-of-care. Our patented platform is designed for maximum ease-of-use.
                         <br><strong class="font-semibold" style="color: var(--brand-blue);">No-Step. No Confusion. Just Results.</strong>
                     </p>
