--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     1. ודא שתמונת הרקע שלך נמצאת באותה תיקייה כמו קובץ ה-HTML הזה.
                     2. בשורה הבאה, החלף את "your-hero-image.jpg" בשם קובץ התמונה שלך.
                 -->
-                <div style="background-image: url('BMT Lab On Time - Strep A brochure  (1).pdf.png'); background-size: cover; background-position: center;" class="absolute inset-0"></div>
+                <div style="background-image: url('yBMT Lab On Time - Strep A brochure  (1).pdf.png'); background-size: cover; background-position: center;" class="absolute inset-0"></div>
                 <div class="absolute inset-0 bg-black opacity-40"></div>
                  
                 <div class="relative z-10 text-white">
@@ -129,12 +129,13 @@
             </section>
              
             <!-- אזור תמונת המוצר -->
-            <section class="mb-6 p-2 rounded-xl" style="background-color: var(--bg-separator-blue);">
+            <!-- !!! שינוי: הוסר הרקע התכלת מסביב לתמונה !!! -->
+            <section class="mb-6">
                 <!-- 
                     --- איך להחליף את תמונת המוצר ---
                     החלף את "image.png" בשם קובץ התמונה שלך.
                 -->
-                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto rounded-lg shadow-md max-w-sm mx-auto">
+                <img src="image.png" alt="Lab-On-Time Device" class="w-full h-auto max-w-sm mx-auto">
             </section>
 
             <!-- נתונים מרכזיים -->
