--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
                     1. החלף את "unnamed.png" בשם קובץ הלוגו שלך. ודא שהוא באותה תיקייה.
                     2. כדי לשנות את גודל הלוגו, שנה את המספר ב- `style="height: 55px;"`.
                 -->
-                <img src="unnamed.png" alt="BMT Diagnostics Logo" style="height: 55px;">
-            </div>
-            <div class="text-right text-sm font-semibold" style="color: var(--brand-blue-dark);">
-                Revolutionizing<br>Point-of-Care Diagnostics
+                <img src="unnamed.png" alt="BMT Diagnostics Logo" style="height: 100px;">
             </div>
         </header>
 
@@ -196,7 +193,7 @@
             <section class="text-center max-w-4xl mx-auto">
                 <div>
                     <h3 class="text-base font-semibold uppercase tracking-wider mb-2" style="color: var(--brand-blue);">The Solution</h3>
-                    <h2 class="text-4xl font-bold mb-4" style="color: var(--text-dark);">Lab-On-Time™</h2>
+                    <img src="unnamed (1).png" alt="Lab-On-Time Logo" class="h-16 mx-auto mb-4">
                     <p class="text-lg leading-relaxed max-w-3xl mx-auto" style="color: var(--text-light);">
                         BMT Diagnostics closes this gap by bringing instant, reliable testing directly to the point-of-care. Our patented platform is designed for maximum ease-of-use.
                         <br><strong class="font-bold block mt-3 text-lg" style="color: var(--brand-blue);">No-Step. No Confusion. Just Results.</strong>
@@ -209,27 +206,28 @@
             <!-- תכונות עיקריות -->
             <section>
                  <h2 class="text-2xl font-bold text-center mb-8" style="color: var(--brand-blue-dark);">Why Lab-On-Time™ is the Right Choice</h2>
+                 <!-- !!! שינוי: הטקסטים שוכתבו מחדש לאורך אחיד כדי להבטיח מראה סימטרי. !!! -->
                  <div class="grid grid-cols-4 gap-8 text-center">
-                    <div>
+                    <div class="flex flex-col">
                         <svg class="h-10 w-10 mx-auto mb-2 text-sky-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" /></svg>
-                        <h3 class="font-bold text-base mt-1">Rapid & Efficient</h3>
-                        <p class="text-sm text-slate-500 mt-1">Actionable results during a single patient visit.</p>
+                        <h3 class="font-bold text-base mt-1">Immediate Treatment</h3>
+                        <p class="text-sm text-slate-500 mt-1 px-1 flex-grow">Enables instant treatment decisions with results in about 5 minutes.</p>
                     </div>
-                    <div>
-                        <svg class="h-10 w-10 mx-auto mb-2 text-sky-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                        <h3 class="font-bold text-base mt-1">Highly Accurate</h3>
-                        <p class="text-sm text-slate-500 mt-1">Closed-system design minimizes user error.</p>
-                    </div>
-                    <div>
+                    <div class="flex flex-col">
                         <svg class="h-10 w-10 mx-auto mb-2 text-sky-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12.75 15l3-3m0 0l-3-3m3 3h-7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-                        <h3 class="font-bold text-base mt-1">Exceptionally Simple</h3>
-                        <p class="text-sm text-slate-500 mt-1">Intuitive one-step operation requires minimal training.</p>
+                        <h3 class="font-bold text-base mt-1">Unmatched Simplicity</h3>
+                        <p class="text-sm text-slate-500 mt-1 px-1 flex-grow">A patented 1-step process with less than one minute of hands-on time.</p>
                     </div>
-                    <!-- !!! שינוי: התכונה האחרונה שונתה כדי להדגיש את הפשטות והייחודיות של המוצר. !!! -->
-                    <div>
+                    <div class="flex flex-col">
+                        <svg class="h-10 w-10 mx-auto mb-2 text-sky-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        <!-- !!! שינוי: הכותרת פוצלה לשתי שורות כדי לשמור על גובה אחיד. !!! -->
+                        <h3 class="font-bold text-base mt-1">Superior<br>Accuracy</h3>
+                        <p class="text-sm text-slate-500 mt-1 px-1 flex-grow">Our physician-driven, closed-system design provides lab-grade results.</p>
+                    </div>
+                    <div class="flex flex-col">
                         <svg class="h-10 w-10 mx-auto mb-2 text-sky-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75m-3-7.036A11.959 11.959 0 013.598 6 11.99 11.99 0 003 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.623 0-1.631-.465-3.163-1.282-4.471m-2.11-1.138A11.959 11.959 0 0112 3.465c-1.144 0-2.234.226-3.235.632m12.332 3.292a11.962 11.962 0 01-3.235-.632" /></svg>
-                        <h3 class="font-bold text-base mt-1">Patented Simplicity</h3>
-                        <p class="text-sm text-slate-500 mt-1">All-in-one pen for a direct, clear answer.</p>
+                        <h3 class="font-bold text-base mt-1">Error-Proof by Design</h3>
+                        <p class="text-sm text-slate-500 mt-1 px-1 flex-grow">The all-in-one system has zero open transfers, ensuring user safety.</p>
                     </div>
                  </div>
             </section>
@@ -245,7 +243,7 @@
                 We are actively seeking global strategic partners, distributors, and OEM collaborators.
              </p>
             <p class="text-xs">
-                <strong>Contact:</strong> Phone: +972-4-639116 | Email: <a href="mailto:info@bmtdx.com">info@bmtdx.com</a> | Website: <a href="http://www.bio-marketing-t.com" target="_blank" rel="noopener noreferrer">www.bio-marketing-t.com</a>
+                <strong>Contact:</strong> Phone: +972-4-639116 | Email: <a href="mailto:idan@bmtdx.com">idan@bmtdx.com</a> | Website: <a href="http://www.bio-marketing-t.com" target="_blank" rel="noopener noreferrer">www.bio-marketing-t.com</a>
                 <br>
                 <span class="mt-2 block">&copy; 2025 BMT Diagnostics. All rights reserved.</span>
             </p>
